# speculor-sdk-dist

./: .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
docs/: plugin-development.md
examples/minimal-plugin/: CMakeLists.txt  README.md  my_plugin.cpp
